add working js compilation

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,3 +24,9 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: bootstrap
+
+  node:
+    build:
+      context: ./.docker/node
+    volumes:
+      - "./:/code"
