--- a/assets/package.json
+++ b/assets/package.json
@@ -14,6 +14,7 @@
     "babel-preset-env": "^1.7.0",
     "css-loader": "^1.0.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^2.0.0",
     "mini-css-extract-plugin": "^0.4.2",
     "node-sass": "^4.9.3",
     "optimize-css-assets-webpack-plugin": "^5.0.0",
@@ -27,6 +28,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.4"
   }
