--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,9 @@
-node_modules
-dist/*
-!dist/.gitkeep
-public/tmp.html
-public/_tmp/*
-assets/node_modules
-public/assets/*
-deployment
+.idea
+
+###> symfony/framework-bundle ###
 /.env
+/public
+/public_html/build/
 /var/
 /vendor/
 ###< symfony/framework-bundle ###
@@ -19,3 +16,10 @@ deployment
 ###> symfony/web-server-bundle ###
 /.web-server-pid
 ###< symfony/web-server-bundle ###
+
+###> symfony/webpack-encore-pack ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-pack ###
