--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
         "bootstrap": "^4.1.3",
         "font-awesome": "^4.7.0",
         "jquery": "^3.3.1",
-        "popper.js": "^1.14.4"
+        "popper.js": "^1.14.4",
+        "slick-carousel": "^1.8.1"
     },
     "devDependencies": {
         "@symfony/webpack-encore": "^0.19.0",
