--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,12 @@
         "symfony/yaml": "*"
     },
     "require-dev": {
+        "behat/behat": "^3.5@dev",
+        "behat/mink": "^1.7@dev",
+        "behat/mink-browserkit-driver": "^1.3@dev",
+        "behat/mink-extension": "^2.1@dev",
+        "behat/mink-goutte-driver": "^1.2@dev",
+        "behat/mink-selenium2-driver": "^1.3@dev",
         "symfony/debug-pack": "*",
         "symfony/dotenv": "*",
         "symfony/maker-bundle": "^1.0",
@@ -78,5 +84,6 @@
             "require": "4.1.*"
         },
         "public-dir": "public_html"
-    }
+    },
+    "minimum-stability": "dev"
 }
